@@ -1,4 +1,7 @@
 0.5.1
+Added KKEditClassTools.cpp
+Started tools.
+Set/get menuitem string now static string.
 Added get current line number to QT_document.
 Fixed saving current line in save session.
 Done sessions.
